@@ -1,5 +1,9 @@
 2013-06-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* eww.el: Rewrite to implement form elements "by hand" instead of
+	relying in widget.el.  Using widget.el leads to too many
+	user interface inconsistencies.
+
 	* shr.el (shr-urlify): Use `keymap' instead of `local-map' so that we
 	don't shadow mode-specific bindings.
 
